# pet-fcrypt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fcrypt/: __main__.py  main.py  settings.py
fcrypt/cipher/: cipher.py
fcrypt/commands/: commands.py
fcrypt/descriptors/: path.py
fcrypt/models/: __init__.py  buffer.py  file.py
fcrypt/utils/: helpers.py
scripts/: build.sh  command.sh  generate_password.sh
